# Snake

./: CMakeLists.txt  LICENSE  README.md
libs/SDL2-2.0.9-Mingw/: WhatsNew.txt
libs/SDL2-2.0.9-Mingw/docs/: README-directfb.md  README-ios.md  README-macosx.md  README-windows.md  README-winrt.md
libs/SDL2-2.0.9-Mingw/test/: README  relative_mode.markdown
libs/SDL2-2.0.9-Mingw/x86_64-w64-mingw32/include/SDL2/: SDL_system.h
src/: GameWindow.cpp  GameWindow.h  SnakeGame.cpp  SnakeGame.h  Source.cpp  TimeManager.cpp  TimeManager.h  snake.cpp  snake.h  window.cpp  window.h
