cmake_minimum_required(VERSION 3.7)
project(Snaky)

set(CMAKE_CXX_STANDARD 14)
set(SDL2_INCLUDE_DIR /usr/include/SDL2)
set(SDL2_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2.so)
set(SDL2_mixer_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_mixer.so)
set(SDL2_ttf_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_ttf.so)
include_directories(${SDL2_INCLUDE_DIR})
set(SOURCE_FILES src/Source.cpp src/snake.cpp src/snake.h src/window.cpp src/window.h)
add_executable(Snaky ${SOURCE_FILES})
target_link_libraries(Snaky ${SDL2_LIBRARY})
target_link_libraries(Snaky ${SDL2_mixer_LIBRARY})
target_link_libraries(Snaky ${SDL2_ttf_LIBRARY})